tests/More/Good/15.tig
/* procedure declaration */
let
	function p(x:string) = ()
in
	p("frabjous")
end
