tests/More/Bad/13.tig
/* error - procedure returns a value */
let
	function p() = 5
in
	p()
end


